--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-pandas
-matplotlib
-streamlit
-numpy
-seaborn
-Babel==2.6.0
-format_currency==0.0.2
-scipy.stats
-babel.numbers
-linregress
+Babel==2.15.0
+matplotlib==3.7.1
+numpy==1.25.2
+pandas==2.0.3
+scipy==1.13.1
+seaborn==0.13.2
+streamlit==1.35.0
